# filler

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
data/: emails.toml  names.toml
src/: date.rs  error.rs  lib.rs  name.rs
src/generator/: date.rs  mod.rs  name.rs
tests/: uuid.rs
