[package]
name = "filler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "bin/app.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = {version = "4.5.39",features = ["derive"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["serde","v4","v7"] }

[dependencies.sqlx]
version = "0.8.6"
features = [
	"runtime-tokio",
	"sqlite",
	"derive",
	"macros"
]