[package]
name = "filler"
version = "0.1.0"
edition = "2024"
authors = ["Wakunguma Kalimukwa <wakunguma13@gmail.com>"]

[[bin]]
name = "filler"
path = "bin/app.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = {version = "4.5.39",features = ["derive"]}
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.22"
uuid = { version = "1.17.0", features = ["serde","v4","v7"] }

[dependencies.sqlx]
version = "0.8.6"
features = [
	"runtime-tokio",
	"sqlite",
	"derive",
	"macros"
]
